# BBPieLeague

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  wsgi.py
scripts/: update_diced.sh
src/bbpieleague/: __init__.py  __main__.py  cli.py  models.py  naf.py  standings.py  storage.py  web.py
src/bbpieleague/static/: style.css
src/bbpieleague/templates/: index.html
