[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bbpieleague"
version = "0.1.0"
description = "League manager tool for Blood Bowl teams, matches, and standings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"flask>=3.0.0",
]

[project.scripts]
bbpieleague = "bbpieleague.cli:main"
bbpieleague-web = "bbpieleague.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bbpieleague"]
